upload-photo fragment,partnerPref completed,setHeader,login,Settings ParentTab completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,13 @@
     <string name="drawer_open">Drawer Open</string>
     <string name="drawer_close">Drawer Close</string>
 
-    <string name="menu_home">My Home</string>
+    <string name="menu_home">Home</string>
     <string name="menu_matches">Matches</string>
-    <string name="menu_profile">Profile</string>
+    <string name="menu_profile">My Profile</string>
 
 
     <string name="default_email">apps@dev.com</string>
     <string name="menu_logout">Logout</string>
     <string name="logout_msg">Do you really want to log out?</string>
+    <string name="menu_setting">Settings</string>
 </resources>
