--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="menu_logout">Logout</string>
     <string name="logout_msg">Do you really want to log out?</string>
     <string name="menu_setting">Settings</string>
+    <string name="exit_msg">Do you really want to Exit?</string>
 </resources>
